infrastructure/staging/planner-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planner-frontend
  namespace: timeplanner
  labels:
    app: planner-frontend
    tier: planner-frontend
spec:
  selector:
    matchLabels:
      app: planner-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: planner-frontend
        tier: planner-frontend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: planner-frontend
          image: mikroedv/timeplanner-planner-frontend:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          lifecycle:
            preStop:
              exec:
                command: ["/usr/bin/nginx", "-s", "quit"]
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 30
            timeoutSeconds: 60
          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "512Mi"
          securityContext:
            allowPrivilegeEscalation: false
